welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:2: error: '(' expected but identifier found.
	if c>b {
           ^